--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Mentors</title>
   </head>
